--- a/index.html
+++ b/index.html
@@ -4,33 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>forside</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
-
 </head>
+<header class="header">
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+        <li><a href="index.html">forside</a></li>
+        <li><a href="info.html">info</a></li>
+        <li><a href="portfolio.html">portfolio</a></li>
+    </ul>
+</header>
 
 <body>
-    <section id="landingpage">
-        <div id="landingpage">
-            <a href="info.html" class="col_left">
-                <div class="col_left">
-                    <h5>info<br>info<br>info<br>info<br>info<br>info</h5>
-                </div>
-            </a>
-            <a href="portfolio.html" class="col_right">
-                <div class="col_right">
-                    <h5>portfolio<br>portfolio<br>portfolio<br>portfolio<br>portfolio<br>portfolio</h5>
-                </div>
-            </a>
+    <section id="frontpage">
+        <div class="sectionwrapper">
+            <div class="heading">A journey of a thousand sites begins
+                with a single click</div>
+        </div>
+        <div id="js_container" class="js">
+            <div id="js_sprite" class=""></div>
         </div>
     </section>
-    <div id="frontpage" class="hide">
-        <h1>A journey of a<br> thousand sites begins<br>
-            with a single click</h1>
-        <div id="play"></div>
-    </div>
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
