portfolio, info, landing done(minus text)

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col_2">
                 <div class="fade_in_2">
-                    <a href="#animation_2">
+                    <a href="#animation">
                         <h6>animation</h6>
                         <p>+ javascript</p>
                         <p>+ interaktiv telling</p>
@@ -76,24 +76,22 @@
         </div>
     </section>
     <section id="web">
+        <h2>grundlæggende web</h2>
+
         <div class="sectionwrapper">
             <div class="col">
-                <h2>grundlæggende web</h2>
                 <h3>udvalgt projekt: stilartsite</h3>
-                <h4>kort præsentation af projektet</h4>
-                <p>I denne opgave blev vi introduceret til html og css(viden). Udgangspunktet skulle tages
-                    Jeg har taget udgangspunkt i en allerede eksisterende stilart,
-                    Jeg udførte testen på følgende måde og det gav anledning til følgende ændringer i mit design (færdighed).
-                    I det efterfølgende gruppeprojekt brugte vi igen X-testmetoden i forhold til at undersøge følgende... (kompetence).</p>
-                <h4>projektets fokus: html + css</h4>
-
-                <p>html angiver sidens indhold (et skelet), mens css angiver sidens udseende</p>
-                <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
-                    <h5>har du lyst til at se mit stilartssite?</h5>
+                <p>I denne opgave blev vi introduceret til html og css(viden). Udgangspunktet skulle tages Jeg har taget udgangspunkt i en allerede eksisterende stilart, Jeg udførte testen på følgende måde og det gav anledning til følgende ændringer i mit design (færdighed). I det efterfølgende gruppeprojekt brugte vi igen X-testmetoden i forhold til at undersøge følgende... (kompetence).</p>
+                <a href="https://www.w3schools.com/html/">
+                    <h7>- moodboard</h7>
                 </a>
                 <a href="https://www.w3schools.com/html/">
-                    <h5>har du lyst til at se min dokumenationsprocess?</h5>
+                    <h7>- wireframe</h7>
                 </a>
+                <a href="http://emiljeemilje.dk/kea/01-web/04-responsive/01_04_02_responsive_site_v2/index.html">
+                    <h7>- stilartsite</h7>
+                </a>
+
             </div>
             <div class="col_narrow">
                 <figure>
@@ -106,20 +104,43 @@
 
     <section id="animation">
         <div class="sectionwrapper">
+
             <div class="col">
                 <h2>grundlæggende animation</h2>
-                <h3>udvalgt projekt: animationsspil</h3>
-                <h4>kort præsentation af projektet</h4>
+                <h3>udvalgt projekt: individuelt animationsspil</h3>
                 <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.
                 </p>
+                <h4>projektets fokus: javascript, konceptudvikling</h4>
 
-                <h4>projektets fokus: javascript</h4>
-                <p>javascript handler om funktionalitet og angiver hvad siden gør</p>
-                <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
-                    <h5>har du lyst til at spille mit spil?</h5>
-                </a>
                 <a href="https://drive.google.com/open?id=1wfFlOh-fKhtWJTYBrJ5X8LqkftRSdBfG">
-                    <h5>har du lyst til at se min dokumenationsprocess?</h5>
+                    <h7>- dokumentationsprocess</h7>
+                </a>
+                <a href="http://emiljeemilje.dk/kea/02-animation/spil/index.html">
+                    <h7>- animationsspil:1</h7>
+                </a>
+
+            </div>
+            <div class="col_narrow">
+                <figure>
+                    <img src="img/animation_01.svg" alt="animation">
+                </figure>
+            </div>
+        </div>
+    </section>
+    <section id="animation">
+
+        <div class="sectionwrapper">
+            <div class="col">
+                <h3>udvalgt projekt: gruppe-animationspil</h3>
+                <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.</p>
+                <h4>projektets fokus: gruppeprojekt, case</h4>
+
+
+                <a href="https://www.w3schools.com/html/">
+                    <h7>- dokumentationsprocess</h7>
+                </a>
+                <a href="http://emiljeemilje.dk/kea/02-animation/dokumentationsside_np/">
+                    <h7>- animationsspil:2</h7>
                 </a>
             </div>
             <div class="col_narrow">
@@ -131,19 +152,17 @@
     </section>
 
     <section id="content">
+        <h2>grundlæggende content</h2>
         <div class="sectionwrapper">
             <div class="col">
-                <h2>grundlæggende content</h2>
                 <h3>udvalgt projekt: redesign</h3>
-                <h4>kort præsentation af projektet</h4>
-                <p>På grundlag af kunstkritikeren John Ruskins og kunsthåndværkeren William Morris’ socialæstetiske program, der havde rod i middelalderens lavssystem, arbejdede Arts and Crafts-bevægelsen for et lødigt hverdags- og arbejdsmiljø og gode forbrugsvarer til alle, bl.a. gennem et samarbejde mellem kunstner og producent.</p>
-                <h4>projektets fokus: indholdsproduktion</h4>
-                <p>Bevægelsen havde sin storhedstid i 1890’erne, repræsenteret af bl.a. William Morris, Walter Crane, Arthur Makmurdo, C.F.A. Voysey og C.R. Ashbee. Den fik stor betydning for blandet andet jugendstilen, for Wiener Werkstätte i Østrig og for den tyske skole Bauhaus.</p>
-                <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
-                    <h5>har du lyst til at se mit redesign?</h5>
-                </a>
+                <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.</p>
+                <h4>projektets fokus: indholdsproduktion, case, test</h4>
                 <a href="http://emiljeemilje.dk/kea/03-content/03-redesign/03_02_07_dokumentationssite/forside.html">
-                    <h5>har du lyst til at se min dokumenationsprocess?</h5>
+                    <h7>- dokumentationsprocess</h7>
+                </a>
+                <a href="https://www.w3schools.com/html/">
+                    <h7>- redesign</h7>
                 </a>
             </div>
             <div class="col_narrow">
@@ -156,25 +175,23 @@
 
     <section id="ux">
         <div class="sectionwrapper">
+            <div class="col">
+                <h2>grundlæggende user experience</h2>
+                <h3>udvalgt projekt: native app</h3>
+                <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.</p>
+                <h4>projektets fokus: native app, designsprint</h4>
+
+                <a href="https://drive.google.com/open?id=13d8KLGgtWBabLmuxOam1eNyVfLyEpwT0">
+                    <h7>- dokumentationsprocess</h7>
+                </a>
+                <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
+                    <h7>- native app</h7>
+                </a>
+            </div>
             <div class="col_narrow">
                 <figure>
                     <img src="img/ux_1.svg" alt="ux">
                 </figure>
-            </div>
-            <div class="col">
-                <h2>grundlæggende user experience</h2>
-                <h3>udvalgt projekt: native app</h3>
-                <h4>kort præsentation af projektet</h4>
-                <p>I denne opgave blev vi introduceret til X-testmetode (viden). Jeg udførte testen på følgende måde og det gav anledning til følgende ændringer i mit design (færdighed).
-                    I det efterfølgende gruppeprojekt brugte vi igen X-testmetoden i forhold til at undersøge følgende... (kompetence).</p>
-                <h4>projektets fokus: native app + prototype</h4>
-                <p>Bevægelsen havde sin storhedstid i 1890’erne, repræsenteret af bl.a. William Morris, Walter Crane, Arthur Makmurdo, C.F.A. Voysey og C.R. Ashbee. Den fik stor betydning for blandet andet jugendstilen, for Wiener Werkstätte i Østrig og for den tyske skole Bauhaus.</p>
-                <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
-                    <h5>har du lyst til at se min native app?</h5>
-                </a>
-                <a href="https://drive.google.com/open?id=13d8KLGgtWBabLmuxOam1eNyVfLyEpwT0">
-                    <h5>har du lyst til at se min dokumenationsprocess?</h5>
-                </a>
             </div>
         </div>
     </section>
