--- a/info.html
+++ b/info.html
@@ -13,9 +13,9 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-        <li><a href="index.html">forside</a></li>
-        <li><a href="info.html">info</a></li>
-        <li><a href="portfolio.html">portfolio</a></li>
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="info.html">Info</a></li>
+        <li><a href="portfolio.html">Portfølje</a></li>
     </ul>
 </header>
 
@@ -23,13 +23,12 @@
     <section id="info">
         <div class="sectionwrapper">
             <div class="col_info">
-                <h2>Infomation</h2>
+                <h2>Hvem er jeg?</h2>
+                <p>Mit navn er Emilie. Jeg er fra Sydhavsøerne, og det har sat sine spor - fordi jeg er nemlig rigtig glad for dyr, natur og åbne marker. Det er noget som altid kan få mig til at slappe af og komme helt ned i gear. Før jeg startede på KEA, så læste jeg interkulturelt markedskommunikation på Copenhagen Business School - men jeg kunne mærke, at jeg manglede noget mere digitalt. Og det er faktisk grunden til at jeg studere på KEA i dag. Generelt bruger jeg al for lang tid foran en skærm, så det er lidt ironisk at jeg har valgt en digital uddannelse - men kunne være dejligt at minimere ens forbrug til udelukkende skole eller job (det er i hvert fald min plan). Jeg elsker at være aktiv - både indendørs og udendørs. Det er også noget, som jeg føler er meget karakteristisk for mig. Og det er noget som gør mig glad. Hvis jeg ikke skulle studere, så ville jeg nok bo i et land hvor jeg kunne snorkle hver eneste dag.
 
-                <h4>hvem er jeg?</h4>
-                <p>Mit navn er Emilie. Jeg er fra Sydhavsøerne, og det har sat sine spor - fordi jeg er nemlig rigtig glad for dyr, natur og åbne marker. Og for nyligt så jeg et billede på facebook, der handler om at ens fødselsdagmåned fortæller hvad man er god til. Jeg er født i september og den sagde, at jeg var god til at bruge penge.Jeg er lige startet som junior designer hos AWORK, som er et webbureau. Her er jeg blandt med til at assistere med lancering af webløsninger (wordPress) og med til udarbejdelse af grafisk / visuelt materiale. Inden jeg startede på KEA, havde jeg dog ingen erfaring med hverken kodning, design, grafisk arbejde eller konceptudvikling. Men det var helt klart det casebaseret projektarbejde og tværfagligheden, som tiltrak mig mest - så håber måske, at jeg kan arbejde med det fremadrettet. På nuværende tidspunkt ved jeg ikke hvad jeg skal bruge uddannelsen til, men jeg synes særligt at projektstyring er spændende.
                 </p>
                 <h4>Hvad vil jeg med multimediedesign-uddannelsen?</h4>
-                <p>Jeg er lige startet som junior designer hos AWORK, som er et webbureau. Her er jeg blandt med til at assistere med lancering af webløsninger (wordPress) og med til udarbejdelse af grafisk / visuelt materiale. Inden jeg startede på KEA, havde jeg dog ingen erfaring med hverken kodning, design, grafisk arbejde eller konceptudvikling. Men det var helt klart det casebaseret projektarbejde og tværfagligheden, som tiltrak mig mest - så håber måske, at jeg kan arbejde med det fremadrettet. På nuværende tidspunkt ved jeg ikke hvad jeg skal bruge uddannelsen til, men jeg synes særligt at projektstyring er spændende. Selvom det tit er svært, så synes jeg at det er fedt at man kan kombinere digital design med kreative ideer.
+                <p>Jeg er lige startet som junior designer hos AWORK, som er et webbureau. Her er jeg blandt med til at assistere med lancering af webløsninger (wordPress) og med til udarbejdelse af grafisk/visuelt materiale. Inden jeg startede på KEA, havde jeg dog ingen erfaring med hverken kodning, design, grafisk arbejde eller konceptudvikling. Men det var helt klart det casebaseret projektarbejde og tværfagligheden, som tiltrak mig mest - så håber måske, at jeg kan arbejde med det fremadrettet. På nuværende tidspunkt ved jeg ikke hvad jeg skal bruge uddannelsen til, men jeg synes særligt at projektstyring er spændende. Selvom uddannelsen indeholder svære elementer, så synes jeg at det er fedt at man kan kombinere digital design med kreative ideer.
                 </p>
             </div>
             <div class="col_info1">
