--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
@@ -13,9 +13,9 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-        <li><a href="index.html">forside</a></li>
-        <li><a href="info.html">info</a></li>
-        <li><a href="portfolio.html">portfolio</a></li>
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="info.html">Info</a></li>
+        <li><a href="portfolio.html">Portefølje</a></li>
 
     </ul>
 </header>
@@ -32,64 +32,61 @@
             <div class="col_1">
                 <div class="fade_in_1">
                     <a href="#web">
-                        <h6> web</h6>
-                        <p>+ html</p>
-                        <p>+ css</p>
-                        <p>+ prototype</p>
-                        <p>+ adobe-programmer</p>
+                        <h6> Web</h6>
+                        <p>+ HTML</p>
+                        <p>+ CSS</p>
+                        <p>+ Prototype</p>
+                        <p>+ Adobe-programmer</p>
                     </a>
                 </div>
             </div>
             <div class="col_2">
                 <div class="fade_in_2">
                     <a href="#animation">
-                        <h6>animation</h6>
-                        <p>+ javascript</p>
-                        <p>+ interaktiv telling</p>
-                        <p>+ scrum</p>
-                        <p>+ adobe-programmer</p>
+                        <h6>Animation</h6>
+                        <p>+ Javascript</p>
+                        <p>+ Interaktiv telling</p>
+                        <p>+ Scrum</p>
+                        <p>+ Adobe-programmer</p>
                     </a>
                 </div>
             </div>
             <div class="col_3">
                 <div class="fade_in_3">
                     <a href="#content">
-                        <h6>content</h6>
-                        <p>+ indholdsproduktion</p>
-                        <p>+ redesign</p>
-                        <p>+ prototype</p>
-                        <p>+ adobe-programmer</p>
+                        <h6>Content</h6>
+                        <p>+ Indholdsproduktion</p>
+                        <p>+ Redesign</p>
+                        <p>+ Prototype</p>
+                        <p>+ Adobe-programmer</p>
                     </a>
                 </div>
             </div>
             <div class="col_4">
                 <div class="fade_in_4">
                     <a href="#ux">
-                        <h6>ux</h6>
-                        <p>+ design sprint</p>
-                        <p>+ user research</p>
-                        <p>+ native app</p>
-                        <p>+ adobe-programmer</p>
+                        <h6>UX</h6>
+                        <p>+ Design sprint</p>
+                        <p>+ User research</p>
+                        <p>+ Native app</p>
+                        <p>+ Adobe-programmer</p>
                     </a>
                 </div>
             </div>
         </div>
     </section>
     <section id="web">
-        <h2>grundlæggende web</h2>
+        <h2>Grundlæggende web</h2>
 
         <div class="sectionwrapper">
             <div class="col">
-                <h3>udvalgt projekt: stilartsite</h3>
-                <p>I denne opgave blev vi introduceret til html og css(viden). Udgangspunktet skulle tages Jeg har taget udgangspunkt i en allerede eksisterende stilart, Jeg udførte testen på følgende måde og det gav anledning til følgende ændringer i mit design (færdighed). I det efterfølgende gruppeprojekt brugte vi igen X-testmetoden i forhold til at undersøge følgende... (kompetence).</p>
-                <a href="https://www.w3schools.com/html/">
-                    <h7>- moodboard</h7>
-                </a>
-                <a href="https://www.w3schools.com/html/">
-                    <h7>- wireframe</h7>
+                <h3>Udvalgt projekt: stilartsite</h3>
+                <p>I grundlæggende web er jeg blevet introduceret til grundlæggende faglige begreber inden for design af digitale brugergrænseflader, digital indholdsproduktion, digital kommunikation, og responsivt webdesign. I denne udvalgte opgave fik jeg kendskab til html og css. Opgaven handlede om at kode et websitet med udgangspunkt i en allerede eksisterende stilart. Websitet er opbygget efter en bestemt wireframe og layoutdiagram. Efterfølgende har jeg anvendt store dele af designprocessen (moodboard, wireframe, styletile og ikondesign) og dokumentationsformerne til andre projekter.</p>
+                <a href="https://drive.google.com/open?id=1leZ5QmvXSbSUMeesXbYNuQRN-GcFJIWg">
+                    <h7>- Wireframe</h7>
                 </a>
                 <a href="http://emiljeemilje.dk/kea/01-web/04-responsive/01_04_02_responsive_site_v2/index.html">
-                    <h7>- stilartsite</h7>
+                    <h7>- Stilartsite</h7>
                 </a>
 
             </div>
@@ -106,17 +103,16 @@
         <div class="sectionwrapper">
 
             <div class="col">
-                <h2>grundlæggende animation</h2>
-                <h3>udvalgt projekt: individuelt animationsspil</h3>
-                <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.
+                <h2>Grundlæggende animation</h2>
+                <h3>Udvalgt projekt: individuelt animationsspil</h3>
+                <p>I grundlæggende animation lærte jeg om animationsteknikker, både fra et visuelt og et teknisk implementations-synspunkt. I denne opgave blev jeg introduceret til javascript-prgrammering til at starte, stoppe og manipulere animationer samt lave interaktiv storytelling. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.
                 </p>
-                <h4>projektets fokus: javascript, konceptudvikling</h4>
 
                 <a href="https://drive.google.com/open?id=1wfFlOh-fKhtWJTYBrJ5X8LqkftRSdBfG">
-                    <h7>- dokumentationsprocess</h7>
+                    <h7>- Dokumentationsprocess</h7>
                 </a>
                 <a href="http://emiljeemilje.dk/kea/02-animation/spil/index.html">
-                    <h7>- animationsspil:1</h7>
+                    <h7>- Animationsspil:1</h7>
                 </a>
 
             </div>
@@ -131,43 +127,39 @@
 
         <div class="sectionwrapper">
             <div class="col">
-                <h3>udvalgt projekt: gruppe-animationspil</h3>
-                <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.</p>
-                <h4>projektets fokus: gruppeprojekt, case</h4>
-
-
-                <a href="https://www.w3schools.com/html/">
-                    <h7>- dokumentationsprocess</h7>
-                </a>
+                <h3>Udvalgt projekt: gruppe-animationspil</h3>
+                <p>Denne udvalgte opgave var et gruppeprojekt. Opgaven blev stillet i samarbejde med virksomheden, Sex og Samfund, som ønskede en interaktiv fortælling. Vi løste opgaven ved hjælp af de teorier og teknikker, der er gennemgået i de første tre moduler. Projektet blev afsluttet med en fernisering, hvor både kunden og repræsentanter for målgruppen deltog og prøvede vores færdige produkt. </p>
                 <a href="http://emiljeemilje.dk/kea/02-animation/dokumentationsside_np/">
-                    <h7>- animationsspil:2</h7>
+                    <h7>- Dokumentationsprocess</h7>
+                </a>
+                <a href="http://emiljeemilje.dk/kea/02-animation/projekt/">
+                    <h7>- Animationsspil:2</h7>
                 </a>
             </div>
             <div class="col_narrow">
                 <figure>
-                    <img src="img/animation_01.svg" alt="animation">
+                    <img src="img/spil_animation.svg" alt="content">
                 </figure>
             </div>
         </div>
     </section>
 
     <section id="content">
-        <h2>grundlæggende content</h2>
+        <h2>Grundlæggende content</h2>
         <div class="sectionwrapper">
             <div class="col">
-                <h3>udvalgt projekt: redesign</h3>
-                <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.</p>
-                <h4>projektets fokus: indholdsproduktion, case, test</h4>
-                <a href="http://emiljeemilje.dk/kea/03-content/03-redesign/03_02_07_dokumentationssite/forside.html">
-                    <h7>- dokumentationsprocess</h7>
+                <h3>Udvalgt projekt: redesign</h3>
+                <p>Denne udvalgte opgave var et gruppeprojekt. Opgaven var at redesigne og udvikle content til en allerede eksisterende virksomhed. Vi valgte en bondegård, som trængte til et frisk pust. Vi anvendte metoder til brugertest af digitale produktioner og lærte at anvende grundlæggende teorier, metoder og værktøjer til styring af enkel multimedieproduktion, der knytter sig til praksis i erhvervet. Vi løste opgaven ved hjælp af de teorier og teknikker, der er gennemgået i de sidste tre måneder.</p>
+                <a href="http://emiljeemilje.dk/kea/02-animation/dokumentationsside_np/">
+                    <h7>- Dokumentationsprocess</h7>
                 </a>
-                <a href="https://www.w3schools.com/html/">
-                    <h7>- redesign</h7>
+                <a href="http://emiljeemilje.dk/kea/03-content/03-redesign/03_02_08_redesign/">
+                    <h7>- Redesign</h7>
                 </a>
             </div>
             <div class="col_narrow">
                 <figure>
-                    <img src="img/animation_1.svg" alt="content">
+                    <img src="img/bonderen.svg" alt="content">
                 </figure>
             </div>
         </div>
@@ -176,16 +168,16 @@
     <section id="ux">
         <div class="sectionwrapper">
             <div class="col">
-                <h2>grundlæggende user experience</h2>
-                <h3>udvalgt projekt: native app</h3>
-                <p>I denne opgave blev jeg introduceret til javascript, hvor jeg blandt andet skulle lave et interaktiv animeret spil. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.</p>
-                <h4>projektets fokus: native app, designsprint</h4>
+                <h2>Grundlæggende user experience</h2>
+                <h3>Udvalgt projekt: native app</h3>
+                <p>Grundlæggende UX har givet mig en grundlæggende forståelse for og erfaring med hvordan samspillet mellem brugere og brugergrænseflader er, samt hvilke teorier, værktøjer og metoder du kan benytte til research, design, test og produktion af digitale løsninger til smartphone, så arbejdet baseres på konkrete indsigter om reelle brugere i stedet for ens egen mavefornemmelse og uholdbare antagelser. Forløbet blev afsluttet med et gruppeprojekt og designsprint, hvor vi designede og udviklede en prototype på en app til iOS/Android.
+                </p>
 
                 <a href="https://drive.google.com/open?id=13d8KLGgtWBabLmuxOam1eNyVfLyEpwT0">
-                    <h7>- dokumentationsprocess</h7>
+                    <h7>- Dokumentationsprocess</h7>
                 </a>
                 <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
-                    <h7>- native app</h7>
+                    <h7>- Native app</h7>
                 </a>
             </div>
             <div class="col_narrow">
@@ -198,6 +190,4 @@
 
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
