--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>forside</title>
+    <title>Landingpage</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
@@ -12,9 +12,9 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-        <li><a href="index.html">forside</a></li>
-        <li><a href="info.html">info</a></li>
-        <li><a href="portfolio.html">portfolio</a></li>
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="info.html">Info</a></li>
+        <li><a href="portfolio.html">Portefølje</a></li>
     </ul>
 </header>
 
