--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     </div>
 
 
-    <section id="portfolio_intro">
+    <section id="portfolio">
         <div class="sectionwrapper">
             <div class="col_1">
                 <div class="fade_in_1">
