--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
-<header class="header">
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="info.html">Info</a></li>
-        <li><a href="portfolio.html">Portefølje</a></li>
-    </ul>
+<header>
+    <nav>
+        <div id="menuknap">☰</div>
+        <ul id="menu" class="hidden">
+            <li><a href="index.html">Forside</a></li>
+            <li><a href="info.html">Info</a></li>
+            <li><a href="portfolio.html">Portfølje</a></li>
+        </ul>
+    </nav>
 </header>
 
 <body>
     <section id="frontpage">
         <div class="sectionwrapper">
-            <div class="heading">A journey of a thousand sites begins
-                with a single click</div>
-        </div>
-        <div id="js_container" class="js">
-            <div id="js_sprite" class=""></div>
+            <div class="heading">A journey of a thousand sites begins with a single click</div>
         </div>
     </section>
     <script src="script.js"></script>
