--- a/portfolio.html
+++ b/portfolio.html
@@ -9,24 +9,18 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
 </head>
-<header class="header">
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="info.html">Info</a></li>
-        <li><a href="portfolio.html">Portefølje</a></li>
-
-    </ul>
+<header>
+    <nav>
+        <div id="menuknap">☰</div>
+        <ul id="menu" class="hidden">
+            <li><a href="index.html">Forside</a></li>
+            <li><a href="info.html">Info</a></li>
+            <li><a href="portfolio.html">Portfølje</a></li>
+        </ul>
+    </nav>
 </header>
 
 <body>
-
-    <div id="js_container" class="js">
-        <div id="js_sprite" class=""></div>
-    </div>
-
-
     <section id="portfolio">
         <div class="sectionwrapper">
             <div class="col_1">
@@ -83,10 +77,10 @@
                 <h3>Udvalgt projekt: stilartsite</h3>
                 <p>I grundlæggende web er jeg blevet introduceret til grundlæggende faglige begreber inden for design af digitale brugergrænseflader, digital indholdsproduktion, digital kommunikation, og responsivt webdesign. I denne udvalgte opgave fik jeg kendskab til html og css. Opgaven handlede om at kode et websitet med udgangspunkt i en allerede eksisterende stilart. Websitet er opbygget efter en bestemt wireframe og layoutdiagram. Efterfølgende har jeg anvendt store dele af designprocessen (moodboard, wireframe, styletile og ikondesign) og dokumentationsformerne til andre projekter.</p>
                 <a href="https://drive.google.com/open?id=1leZ5QmvXSbSUMeesXbYNuQRN-GcFJIWg">
-                    <h7>- Wireframe</h7>
+                    - Wireframe
                 </a>
                 <a href="http://emiljeemilje.dk/kea/01-web/04-responsive/01_04_02_responsive_site_v2/index.html">
-                    <h7>- Stilartsite</h7>
+                    - Stilartsite
                 </a>
 
             </div>
@@ -107,14 +101,14 @@
                 <h3>Udvalgt projekt: individuelt animationsspil</h3>
                 <p>I grundlæggende animation lærte jeg om animationsteknikker, både fra et visuelt og et teknisk implementations-synspunkt. I denne opgave blev jeg introduceret til javascript-prgrammering til at starte, stoppe og manipulere animationer samt lave interaktiv storytelling. Stukturmæssigt følger spillet en bestemt model, men jeg har selv bestemt genre (fantasy) og stil(flat design). Alt grafikken, både figur-elementer, baggrund og UI-elementer er tegnet i illustrator. For at kunne opleve spillet i i en browser, har jeg benyttet mig af browsertekonologier (HTML, CSS og JavaScript) til at implementere den.
                 </p>
-
-                <a href="https://drive.google.com/open?id=1wfFlOh-fKhtWJTYBrJ5X8LqkftRSdBfG">
-                    <h7>- Dokumentationsprocess</h7>
-                </a>
-                <a href="http://emiljeemilje.dk/kea/02-animation/spil/index.html">
-                    <h7>- Animationsspil:1</h7>
-                </a>
-
+                <div class="linkstyle">
+                    <a href="https://drive.google.com/open?id=1wfFlOh-fKhtWJTYBrJ5X8LqkftRSdBfG">
+                        - Dokumentationsprocess
+                    </a>
+                    <a href="http://emiljeemilje.dk/kea/02-animation/spil/index.html">
+                        - Animationsspil:1
+                    </a>
+                </div>
             </div>
             <div class="col_narrow">
                 <figure>
@@ -123,17 +117,17 @@
             </div>
         </div>
     </section>
-    <section id="animation">
+    <section id="animation_1">
 
         <div class="sectionwrapper">
             <div class="col">
                 <h3>Udvalgt projekt: gruppe-animationspil</h3>
                 <p>Denne udvalgte opgave var et gruppeprojekt. Opgaven blev stillet i samarbejde med virksomheden, Sex og Samfund, som ønskede en interaktiv fortælling. Vi løste opgaven ved hjælp af de teorier og teknikker, der er gennemgået i de første tre moduler. Projektet blev afsluttet med en fernisering, hvor både kunden og repræsentanter for målgruppen deltog og prøvede vores færdige produkt. </p>
                 <a href="http://emiljeemilje.dk/kea/02-animation/dokumentationsside_np/">
-                    <h7>- Dokumentationsprocess</h7>
+                    - Dokumentationsprocess
                 </a>
                 <a href="http://emiljeemilje.dk/kea/02-animation/projekt/">
-                    <h7>- Animationsspil:2</h7>
+                    - Animationsspil:2
                 </a>
             </div>
             <div class="col_narrow">
@@ -151,10 +145,10 @@
                 <h3>Udvalgt projekt: redesign</h3>
                 <p>Denne udvalgte opgave var et gruppeprojekt. Opgaven var at redesigne og udvikle content til en allerede eksisterende virksomhed. Vi valgte en bondegård, som trængte til et frisk pust. Vi anvendte metoder til brugertest af digitale produktioner og lærte at anvende grundlæggende teorier, metoder og værktøjer til styring af enkel multimedieproduktion, der knytter sig til praksis i erhvervet. Vi løste opgaven ved hjælp af de teorier og teknikker, der er gennemgået i de sidste tre måneder.</p>
                 <a href="http://emiljeemilje.dk/kea/02-animation/dokumentationsside_np/">
-                    <h7>- Dokumentationsprocess</h7>
+                    - Dokumentationsprocess
                 </a>
                 <a href="http://emiljeemilje.dk/kea/03-content/03-redesign/03_02_08_redesign/">
-                    <h7>- Redesign</h7>
+                    - Redesign
                 </a>
             </div>
             <div class="col_narrow">
@@ -174,10 +168,10 @@
                 </p>
 
                 <a href="https://drive.google.com/open?id=13d8KLGgtWBabLmuxOam1eNyVfLyEpwT0">
-                    <h7>- Dokumentationsprocess</h7>
+                    - Dokumentationsprocess
                 </a>
                 <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
-                    <h7>- Native app</h7>
+                    - Native app
                 </a>
             </div>
             <div class="col_narrow">
