--- a/info.html
+++ b/info.html
@@ -9,14 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
 </head>
-<header class="header">
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="info.html">Info</a></li>
-        <li><a href="portfolio.html">Portfølje</a></li>
-    </ul>
+
+<header>
+    <nav>
+        <div id="menuknap">☰</div>
+        <ul id="menu" class="hidden">
+            <li><a href="index.html">Forside</a></li>
+            <li><a href="info.html">Info</a></li>
+            <li><a href="portfolio.html">Portfølje</a></li>
+        </ul>
+    </nav>
 </header>
 
 <body>
@@ -41,9 +43,7 @@
                 </figure>
             </div>
         </div>
-        <div id="js_container" class="js">
-            <div id="js_sprite" class=""></div>
-        </div>
+
     </section>
 
     <script src="script.js"></script>
